# ginza-examples

./: .gitignore  .replit  LICENSE  README.md  example01.py  pyproject.toml
.github/workflows/: test-examples.yml  test-ginza-examples.yml  test-on-mac.yml  test-on-ubuntu.yml  test-on-windows.yml  test-other.yml  test.yml
dev/: README.md.tpl  update_readme.py  util.py
dev/data/: README.md.tpl  rep.yml
examples/: displacy.py  lexrank_summary.py  similarity.py  split_text.py  token_information.py
examples/data/: run_melos.txt
tests/: test_ginza.py  test_url.py
tests/examples/: test_displacy.py  test_lexrank_summary.py  test_similarity.py  test_split_text.py  test_token_information.py
